# nvidia-5layer-report

./: .gitignore  AGENTS.md  BOOT.md  BRIEFING.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  baba_images.json  decrypt_cookies.py  extract_cookies.py  hello.py  index.html  launch_chrome9300.sh  package-lock.json  start_chrome.sh  xhs.html
.clawhub/: lock.json
projects/elon-poly/elon-research/: README.md  pyproject.toml
projects/elon-poly/elon-research/datasets/normalized/: _placeholder_normalized.txt  event_208544_markets.json  event_208544_trades.json  event_212454_markets.json  event_212454_trades.json  event_220474_markets.json  event_220474_prices.json  event_220474_trades.json  event_226986_markets.json  event_226986_prices.json  event_226986_trades.json  event_236151_markets.json  event_236151_prices.json  event_236151_trades.json  event_251243_markets.json  event_251243_prices.json  event_251243_trades.json  event_257217_markets.json  event_257217_prices.json  event_257217_trades.json  event_278377_markets.json  event_278377_prices.json  event_278377_subgraph_trades.json  event_278377_trades.json  tracking_d861bacb-6108-45d6-9a14-47b9e58ea095_summary.json
projects/elon-poly/elon-research/experiments/: 2026-03-27-next-handoff.md  2026-03-27-session-bootstrap.md  README.md
projects/elon-poly/elon-research/tests/: test_cli.py  test_config.py  test_data_sources.py  test_feature_build.py  test_market_normalization.py  test_normalization_pipeline.py  test_replay.py  test_reporting.py  test_storage.py  test_tweet_normalization.py  test_weak_validation.py
(+1256 files in other folders)
