[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elon-research"
version = "0.1.0"
description = "Elon 推文 Polymarket 研究系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "requests>=2.32.0",
  "typer>=0.12.0",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
elon-research = "elon_research.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
